cmake_minimum_required(VERSION 3.16)
project(stlPractice)

set(CMAKE_CXX_STANDARD 14)

add_executable(template "template/template.cpp")

add_executable(MyArray "MyArray/MyArray.cpp")

add_executable(iterator "iterator/iterator.cpp")

add_executable(string "string/string.cpp")

add_executable(vector "vector/vector.cpp")